--- a/LAB1/index.html
+++ b/LAB1/index.html
@@ -3,10 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
-    <p>This is JS Course</p>
+    <h3>
+      1. leg 2. hypotenuse 3. adjacent angle 4. opposite angle 5. angle(коли
+      задана гіпотенуза)
+    </h3>
+    <script src="index.js"></script>
   </body>
 </html>
