--- a/LAB1/index.html
+++ b/LAB1/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h3>
-      1. leg 2. hypotenuse 3. adjacent angle 4. opposite angle 5. angle(коли
+      1. leg 2. hypotenuse 3. adjacent angle 4. opposite angle 5. angle(при умові, що
       задана гіпотенуза)
     </h3>
     <script src="index.js"></script>
