--- a/LAB2/index.html
+++ b/LAB2/index.html
@@ -1,1 +1,15 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<title>My application</title>
+</head>
+<body>
+	<h1>My application</h1>
+	<h2>More details in the console</h2>
 
+	<script src="SpeakHello.js"></script>
+	<script src="SpeakGoodBye.js"></script>
+	<script src="script.js"></script>
+</body>
+</html>
