--- a/LAB5/index.html
+++ b/LAB5/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div id="options-container">
+    <div id="mode-container">
       <label for="difficulty">Choose difficulty:</label>
       <select id="difficulty" name="difficulty">
         <option value="" selected disabled>-Please choose difficulty</option>
@@ -26,7 +26,7 @@
 
       <button id="start-btn">Start</button>
     </div>
-    <div id="info"></div>
+    <div id="info-container"></div>
 
     <div id="game-container"></div>
 
