--- a/LAB8/index.html
+++ b/LAB8/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Adaptive Navigation</title>
+    <title>LAB8</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -17,16 +17,16 @@
         </div>
         <ul class="nav-menu">
           <li class="nav-item">
-            <a href="#" class="nav-link">Services</a>
+            <a href="#" class="nav-link">Link1</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">Blog</a>
+            <a href="#" class="nav-link">Link2</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">About</a>
+            <a href="#" class="nav-link">Link3</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">Contact</a>
+            <a href="#" class="nav-link">Link4</a>
           </li>
         </ul>
       </nav>
@@ -39,10 +39,8 @@
       <div class="indicators"></div>
     </div>
 
-    <!-- Зображення, які відображаються лише на Large-пристроях -->
     <div id="large-images-container"></div>
 
-    <!-- Зображення, які відображаються лише на Medium-пристроях -->
     <div id="medium-images-container"></div>
 
     <script src="script.js"></script>
