--- a/LAB7/index.html
+++ b/LAB7/index.html
@@ -9,7 +9,7 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
-    <title>One Page Application</title>
+    <title>LAB7</title>
   </head>
   <body>
     <header>
@@ -25,6 +25,7 @@
       <div id="category-container"></div>
     </main>
 
+    
     <script src="script.js"></script>
   </body>
 </html>
