--- a/LAB8/index.html
+++ b/LAB8/index.html
@@ -15,18 +15,30 @@
           <span class="bar"></span>
           <span class="bar"></span>
         </div>
-        <ul class="nav-menu">
+       <ul class="nav-menu">
           <li class="nav-item">
-            <a href="#" class="nav-link">Link1</a>
+            <a href="#" class="nav-link">
+              <img src="data/home.svg" class="nav-icon" />
+              Link1
+            </a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">Link2</a>
+            <a href="#" class="nav-link">
+              <img src="data/home.svg" class="nav-icon" />
+              Link2
+            </a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">Link3</a>
+            <a href="#" class="nav-link">
+              <img src="data/home.svg" class="nav-icon" />
+              Link3
+            </a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">Link4</a>
+            <a href="#" class="nav-link">
+              <img src="data/home.svg" class="nav-icon" />
+              Link4
+            </a>
           </li>
         </ul>
       </nav>
